src/objects/Switch__c.object
<CustomObject>
    <description>This is the unit from which all operations will be controlled</description>
    <fields>
        <fullName>Room__c</fullName>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Switch</relationshipLabel>
        <relationshipName>Switch</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SwitchDescription__c</fullName>
        <label>Switch Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wattage__c</fullName>
        <description>Input for the wattage of the associated instrument with this switch</description>
        <label>Wattage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isSwitchedOn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSwitchedOn</label>
        <type>Checkbox</type>
    </fields>
    <label>Switch</label>
    <nameField>
        <label>Switch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Switch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>